[tool.poetry]
name = "medicar"
version = "0.1.0"
description = "Platform for registering and managing medical appointments and schedules."
authors = ["Wesley Mendes <wesley@wesleymendes.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
django-cors-headers = "^3.5.0"
django-filter = "^2.4.0"
djangorestframework = "^3.12.1"
Markdown = "^3.3.3"
psycopg2-binary = "^2.8.6"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
factory-boy = "^3.1.0"
Faker = "^4.14.0"
flake8 = "^3.8.4"
ipdb = "^0.13.4"
pytest = "^6.1.2"
pytest-django = "^4.1.0"
pytest-flake8 = "^1.0.6"
requests = "^2.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
